<resources>
    <string name="app_name">SatuWargaApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_papan_pengumuman">Pengumuman</string>
    <string name="title_keuangan">Keuangan</string>
    <string name="title_pelayanan">Pelayanan</string>
    <string name="tab_text_1">Laporan Keuangan</string>
    <string name="tab_text_2">Iuran Kas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="string_isi_pengumuman">Bapak, ibu, mohon maaf tukang sampahnya hari ini tidak bisa mengangkut, ban nya bocor, besok Insya Allah baru bisa diangkut, terima kasih</string>

    <string-array name="data_nama">
        <item>Pak RT</item>
        <item>Bu RW</item>
        <item>Pak Andi</item>
        <item>Ibu Sinta</item>
        <item>Pak Budi</item>
        <item>Ibu Yani</item>
        <item>Pak Didi</item>
        <item>Bu Lilis</item>
    </string-array>

    <string-array name="data_jabatan">
        <item>Ketua RT</item>
        <item>Ketua RW</item>
        <item>Wakil RT</item>
        <item>Bendahara</item>
        <item>Sekretaris</item>
        <item>Kader Posyandu</item>
        <item>Warga</item>
        <item>Warga</item>
    </string-array>

    <string-array name="data_isi">
        <item>Rapat RT akan dilaksanakan pada hari Minggu pukul 10 pagi.</item>
        <item>Mohon warga menjaga kebersihan lingkungan.</item>
        <item>Gotong royong akan dimulai pukul 7 pagi.</item>
        <item>Terima kasih atas partisipasi warga dalam kegiatan donor darah.</item>
        <item>Pengajian rutin akan diadakan di rumah Pak Didi.</item>
        <item>Posyandu balita akan dilaksanakan besok pagi.</item>
        <item>Jangan lupa iuran kebersihan bulan ini.</item>
        <item>Senam pagi bersama akan dilaksanakan di lapangan.</item>
    </string-array>

    <string-array name="data_tanggal">
        <item>2025-04-20</item>
        <item>2025-04-18</item>
        <item>2025-04-19</item>
        <item>2025-04-17</item>
        <item>2025-04-21</item>
        <item>2025-04-22</item>
        <item>2025-04-23</item>
        <item>2025-04-24</item>
    </string-array>

    <string-array name="data_likes">
        <item>15</item>
        <item>22</item>
        <item>12</item>
        <item>18</item>
        <item>10</item>
        <item>25</item>
        <item>8</item>
        <item>30</item>
    </string-array>

    <string-array name="data_comment">
        <item>3</item>
        <item>5</item>
        <item>2</item>
        <item>4</item>
        <item>1</item>
        <item>6</item>
        <item>2</item>
        <item>10</item>
    </string-array>

    <array name="data_photo">
        <item>@drawable/dummyprofile</item>
        <item>@drawable/dummyprofile</item>
        <item>@drawable/dummyprofile</item>
        <item>@drawable/dummyprofile</item>
        <item>@drawable/dummyprofile</item>
        <item>@drawable/dummyprofile</item>
        <item>@drawable/dummyprofile</item>
        <item>@drawable/dummyprofile</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="pelaporan_masalah">Pelaporan Masalah</string>
    <string name="desc_pelaporan_masalah">Fitur ini memungkinkan warga untuk melaporkan masalah lingkungan seperti kebersihan, infrastruktur rusak, atau gangguan keamanan. Laporan akan diproses dan diteruskan ke pengurus RT/RW untuk ditindaklanjuti dalam waktu yang ditentukan. Transparansi dalam penanganan masalah akan dipantau secara berkala.</string>
    <string name="syarat_ketentuan"><![CDATA[Syarat & Ketentuan]]></string>
    <string name="pengajuan_izin">Pengajuan Izin</string>
    <string name="pengajuan_surat">Pengajuan Surat</string>
    <string name="pengajuan_validasi">Pengajuan Validasi</string>
    <string name="pengajuan_bantuan_darurat">Pengajuan Bantuan Darurat</string>
    <string name="lokasi_foto">Lokasi Foto</string>
    <string name="def_lokasi">Cendana Residence RT 01 RW 06 No. 34 Kelurahan Depok, Kecamatan Pancoran Mas, Depok, Jawa Barat, 16411</string>
    <string name="judul_laporan">Judul Laporan</string>
    <string name="detail_laporan">Detail Laporan</string>
    <string name="checkbox_foto">Saya bertanggungjawab atas keaslian laporan ini dan menyatakan bahwa kejadian yang dilaporkan benar-benar terjadi.</string>
    <string name="kirim_laporan">Kirim Laporan</string>
    <string name="def_ubahktp">Validasi Surat Keterangan Ubah KTP</string>
    <string name="isiPengumuman" />
    <string name="password">Masukan Password</string>
    <string name="email">Masukkan email</string>
    <string name="btn_login_google">Login with Google</string>
    <string name="or">or</string>
    <string name="btn_login">Login</string>
    <string name="tv_login">login</string>
    <string name="default_web_client_id">286301546727-20a4thu5rbnfennou5r34ui2rtg797g4.apps.googleusercontent.com</string>
</resources>