<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_gravity="center"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/logoKebunQ"
            android:layout_width="101dp"
            android:layout_height="101dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.061"
            android:src="@drawable/logosatuwarga"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="48dp"
            android:gravity="top"
            android:lineSpacingExtra="4sp"
            android:text="@string/tv_login"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            android:translationY="-1.94sp"
            app:layout_constraintEnd_toEndOf="@+id/logoKebunQ"
            app:layout_constraintStart_toStartOf="@+id/logoKebunQ"
            app:layout_constraintTop_toBottomOf="@+id/logoKebunQ"
            tools:ignore="TextSizeCheck" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_login_email"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="39dp"
            android:textColorHint="@color/blue_200"
            app:layout_constraintEnd_toEndOf="@+id/tv_login"
            app:layout_constraintStart_toStartOf="@+id/tv_login"
            app:layout_constraintTop_toBottomOf="@+id/tv_login">

            <com.md.satuwargaapp.customUI.CustomEmailEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:padding="18dp"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_login_password"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="@+id/tf_login_email"
            app:layout_constraintStart_toStartOf="@+id/tf_login_email"
            app:layout_constraintTop_toBottomOf="@+id/tf_login_email"
            app:endIconMode="password_toggle">
            <com.md.satuwargaapp.customUI.CustomPassword
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                app:errorEnabled="true"
                android:clickable="true"
                android:padding="16dp"
                android:focusable="true"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="39dp"
            android:lineSpacingExtra="5sp"
            android:text="@string/btn_login"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintEnd_toEndOf="@+id/tf_login_password"
            app:layout_constraintStart_toStartOf="@+id/tf_login_password"
            app:layout_constraintTop_toBottomOf="@+id/tf_login_password"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/or"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="5sp"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:translationY="-2.62sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/signInButton"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="24dp"
            android:text="@string/btn_login_google"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintEnd_toEndOf="@+id/or"
            app:layout_constraintStart_toStartOf="@+id/or"
            app:layout_constraintTop_toBottomOf="@+id/or"
            tools:ignore="VisualLintButtonSize" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>